--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
+		"dev:email": "email dev",
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@react-email/components": "0.3.1",
 		"@types/aos": "^3.0.7",
 		"aos": "^2.3.4",
 		"gsap": "^3.13.0",
@@ -23,12 +25,14 @@
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
+		"@react-email/preview-server": "^4.2.0",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.3.4",
+		"react-email": "4.2.0",
 		"tailwindcss": "^4",
 		"typescript": "^5"
 	}
