--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"optimize-images": "node scripts/optimize-images.js"
 	},
 	"dependencies": {
 		"@react-email/components": "0.3.1",
 		"@types/aos": "^3.0.7",
 		"aos": "^2.3.4",
+		"clsx": "^2.1.1",
 		"gsap": "^3.13.0",
 		"lenis": "^1.3.4",
 		"next": "15.3.4",
@@ -21,7 +23,8 @@
 		"react-hook-form": "^7.58.1",
 		"react-hot-toast": "^2.5.2",
 		"react-icons": "^5.5.0",
-		"swiper": "^11.2.8"
+		"swiper": "^11.2.8",
+		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
@@ -32,6 +35,7 @@
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.3.4",
+		"jimp": "^1.6.0",
 		"react-email": "4.2.0",
 		"tailwindcss": "^4",
 		"typescript": "^5"
