--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
 		"optimize-images": "node scripts/optimize-images.js"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.1.1",
 		"@react-email/components": "0.3.1",
+		"@tanstack/react-query": "^5.83.0",
 		"@types/aos": "^3.0.7",
 		"aos": "^2.3.4",
 		"clsx": "^2.1.1",
+		"google-libphonenumber": "^3.2.42",
 		"gsap": "^3.13.0",
 		"lenis": "^1.3.4",
 		"next": "15.3.4",
@@ -25,12 +28,14 @@
 		"react-icons": "^5.5.0",
 		"resend": "^4.6.0",
 		"swiper": "^11.2.8",
-		"tailwind-merge": "^3.3.1"
+		"tailwind-merge": "^3.3.1",
+		"zod": "^4.0.5"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@react-email/preview-server": "^4.2.0",
 		"@tailwindcss/postcss": "^4",
+		"@types/google-libphonenumber": "^7.4.30",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
