--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"next": "15.3.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-google-recaptcha-v3": "^1.11.0",
 		"react-hook-form": "^7.58.1",
 		"react-hot-toast": "^2.5.2",
 		"react-icons": "^5.5.0",
